--- a/unit-4/137-CA-04.tex
+++ b/unit-4/137-CA-04.tex
@@ -261,6 +261,17 @@ If you do not know how to start, experiment with the functions
 \begin{frame}
 	\frametitle{MAT137 Lecture 23 --- Inverse Functions II}
 
+	{\bf Warmup:}
+
+	$f$ is defined so that for $t\in\mathbb R$, we have $f(t)=(|t|,-|t|)$.
+
+	$g$ is defined so that for $t\in\mathbb R$, we have $g(t)=\pm |t|$.
+
+	\medskip
+
+	For each of $f$ and $g$, find a domain/codomain such that they are a function,
+	or explain why you can't.
+
 	\vfill
 	{\bf Before next class:}
 		\begin{itemize} \normalsize
@@ -316,10 +327,10 @@ Let $a, b \in \R$ such that $b=f(a)$.
 		Take \DS{\frac{d}{dy}} of both sides of  \quad \DS{ f(f^{-1}( (y)) = y }.
 		}
 	
-	\p \vfill
+	 \vfill
 	\item  Obtain a formula for \DS{ \left(f^{-1}\right)''(b) } in terms of \DS{f'(a)} and \DS{f''(a)}.
 
-	\p \vfill	
+	 \vfill	
 	\item   \emph{Challenge:}  Obtain a formula for \DS{ \left(f^{-1}\right)'''(b) } in terms of \DS{f'(a)}, \DS{f''(a)}, and \DS{f'''(a)}.
 
 \end{enumerate}
@@ -344,7 +355,6 @@ THEN $f \circ g$ is one-to-one.
 
 \vfill
 
-\p
 Suggestion:
 	\begin{enumerate}
 		\item Write the definition of what you want to prove.
